k8s/spring-vta/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  spring-deployment
  namespace: default
  labels:
    app: vta
spec:
  selector:
    matchLabels:
      app: vta
  replicas: 1
  template:
    metadata:
      labels:
        app: vta
    spec:
      containers:
      - name:  vta
        image:  ghcr.io/argirisdak/vta:latest
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8080
          failureThreshold: 20
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
            httpGet:
              path: "/actuator/health/readiness"
              port: 8080
            failureThreshold: 10
            periodSeconds: 10
            initialDelaySeconds: 30
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort:  8080
          name:  vta
      imagePullSecrets:
      - name: registry-credentials
