k8s/spring-vta/spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vta
  name: vta
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: vta
  selector:
    app: vta
  type: ClusterIP
