k8s/spring-vta/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: default
spec:
  rules:
  - host: "vta-spring.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vta
            port:
              name: vta
